Opened 15 years ago
Closed 14 years ago
#6375 closed bug (fixed)
[Terminal] several strings not yet translated
Reported by: | diver | Owned by: | phoudoin |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Terminal | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Change History (7)
comment:1 by , 15 years ago
Summary: | [Terminal] "Edit" menu is not yet translated → [Terminal] several strings not yet translated |
---|
comment:2 by , 15 years ago
Version: | R1/alpha2 → R1/Development |
---|
comment:3 by , 14 years ago
The one from description https://dev.haiku-os.org/browser/haiku/trunk/src/apps/terminal/TermWindow.cpp?rev=37723#L321 is fixed. The others remain.
comment:4 by , 14 years ago
Owner: | changed from | to
---|---|
Status: | new → in-progress |
comment:7 by , 14 years ago
Resolution: | → fixed |
---|---|
Status: | in-progress → closed |
Okay, hrev39749 fixed the fix. :-)
Note:
See TracTickets
for help on using tickets.
Several others I've come across:
http://dev.haiku-os.org/browser/haiku/trunk/src/apps/terminal/AppearPrefView.cpp#L188 ("Custom")
http://dev.haiku-os.org/browser/haiku/trunk/src/apps/terminal/Colors.cpp#L12 ("Black on White")
http://dev.haiku-os.org/browser/haiku/trunk/src/apps/terminal/Colors.cpp#L23 ("White on Black")
http://dev.haiku-os.org/browser/haiku/trunk/src/apps/terminal/Colors.cpp#L34 ("Custom")
http://dev.haiku-os.org/browser/haiku/trunk/src/apps/terminal/TermConst.h#L101 (color settings)