Localize some forgotten strings spotted by diver. Fix #6375.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@39748 a95241bf-73f2-0310-859d-f6bbb57e9c96